--- a/index.html
+++ b/index.html
@@ -3,8 +3,33 @@
     <head>  
         <title>Guess The Number !</title>  
         <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+        <link href="app.css" rel="stylesheet">
     </head>
-    <body>  
+    <body ng-app="app">  
+        <div class="container" ng-controller="GuessTheNumberController">
+            <div class="card" style="max-width: 540px;">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h2 class="text-center">Guess The Number</h2>
+                    </div>
+                    <p class="well lead text-center">Guess the computer generated random number between 1 and 1000.</p>
+                    <label>Your Guess:</label>
+                    <input type="number" ng-model="guess">
+                    <button ng-click="verifyGuess()" class="btn btn-primary">Verify</button>
+                    <button ng-click="initializeGame()" class="btn btn-warning btn-sm">Restart</button>
+                    <p>
+                        <p ng-show="deviation<0" class="alert alert-warning">Your guess is higher</p>
+                        <p ng-show="deviation>0" class="alert alert-warning">Your guess is lower</p>
+                        <p ng-show="deviation === 0" class="alert alert-success">Yes! That"s it.</p>
+                    </p>
+                    <p class="text-info">No of guesses: <span>{{noOfTries}}</span>
+                    </p>
+                </div>
+                
+                
+            </div>
+        </div>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.js"></script>
+    <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
